<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp">

                <LinearLayout
                    android:id="@+id/cvs_company"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/company_1"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:gravity="center_vertical">

                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/cvs"
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:layout_centerVertical="true"
                            android:layout_margin="15dp"
                            android:src="@drawable/cvs_logo"
                            app:civ_border_color="#fff"
                            app:civ_border_width="5dp" />

                        <LinearLayout
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/cvs"
                            android:background="#77ffffff"
                            android:orientation="vertical"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-black"
                                android:gravity="center_vertical"
                                android:text="@string/cvs"
                                android:textColor="@color/grey"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:gravity="center_vertical"
                                android:text="@string/cvs_duration_location"
                                android:textColor="@color/grey"
                                android:textSize="10sp" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp">

                <LinearLayout
                    android:id="@+id/apple_company"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/company_2"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:gravity="center_vertical">

                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/apple"
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:layout_centerVertical="true"
                            android:layout_margin="15dp"
                            android:src="@drawable/apple_logo"
                            app:civ_border_color="#fff"
                            app:civ_border_width="5dp" />

                        <LinearLayout
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/apple"
                            android:background="#77ffffff"
                            android:orientation="vertical"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-black"
                                android:gravity="center_vertical"
                                android:text="@string/apple"
                                android:textColor="@color/grey"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:gravity="center_vertical"
                                android:text="@string/apple_duration_location"
                                android:textColor="@color/grey"
                                android:textSize="10sp" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </ScrollView>
</FrameLayout>