<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            app:cardElevation="22dp">
            <LinearLayout

                android:layout_margin="10dp"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:onClick="testMethod"
                android:focusable="true">
                <TextView
                    android:textColor="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="My Contact"
                    android:fontFamily="sans-serif-black"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:id="@+id/phone"
                    android:autoLink="phone"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:padding="3dp"
                        android:scaleType="fitCenter"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_phone_24"/>


                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:textSize="18sp"
                            android:textColor="@color/grey"
                            android:maxLines="1"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:ellipsize="end"
                            android:text="@string/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:textSize="12sp"
                            android:textColor="@color/grey"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="Phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/email"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:padding="3dp"
                        android:scaleType="fitCenter"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_email_24"/>


                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:fontFamily="sans-serif-condensed-medium"
                            android:textSize="18sp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="@string/email_address"
                            android:textColor="@color/grey"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:textSize="12sp"
                            android:maxLines="1"
                            android:textColor="@color/grey"
                            android:ellipsize="end"
                            android:text="Email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linkedIn"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:padding="3dp"
                        android:scaleType="fitCenter"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/linkedin_logo"/>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:textSize="18sp"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/grey"
                            android:text="@string/linkedin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:textSize="12sp"
                            android:textColor="@color/grey"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="LinkedIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>



                <LinearLayout
                    android:id="@+id/github"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:padding="3dp"
                        android:scaleType="fitCenter"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/github_logo"/>


                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginStart="4dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:textSize="18sp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="@string/github"
                            android:textColor="@color/grey"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:textSize="12sp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/grey"
                            android:text="GitHub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>